--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ seaborn~=0.13.2
 nltk~=3.9.1
 scikit-learn~=1.6.1
 python-dateutil~=2.9.0post0
+uvicorn~=0.34.1
+fastapi~=0.115.12
+pydantic~=2.11.3
+networkx~=3.4.2
+xgboost~=2.1.1
